Heart Icon only appears when user Authenticated. Fix styling for product page on mobile; add scroll indicator on page load. Toast restyled for better visibility on mobile.

--- a/src/components/toast.module.scss
+++ b/src/components/toast.module.scss
@@ -1,6 +1,7 @@
 .toastWrapper {
-  background-color: var(--text-color);
+  background-color: var(--primary);
   color: var(--text-color-inverted);
+  border: 4px solid var(--text-color-inverted);
   width: max-content;
   position: absolute;
   right: var(--vp-sm);
@@ -15,12 +16,14 @@
   gap: var(--space-sm);
   min-width: 100px;
   justify-content: center;
-  z-index: 10;
+  z-index: 9999;
   white-space: nowrap;
+  transition: var(--transition-2);
   @media (max-width: 1024px) {
     position: fixed;
     bottom: unset;
-    top: calc(100vh - var(--vp-lg));
+    bottom: var(--vp-md);
+    transform: scale(1.1);
   }
 }
 
